--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic/pro": "2.0.3",
     "@ionic/schematics-angular": "1.0.1",
     "core-js": "^2.5.3",
+    "ngx-cookie": "^4.0.2",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
   },
