--- a/package.json
+++ b/package.json
@@ -27,6 +27,13 @@
     "@ionic/ng-toolkit": "1.0.0",
     "@ionic/pro": "2.0.3",
     "@ionic/schematics-angular": "1.0.1",
+    "cordova-android": "6.3.0",
+    "cordova-ios": "4.5.5",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^2.0.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.3",
     "ngx-cookie": "^4.0.2",
     "rxjs": "6.2.2",
@@ -57,5 +64,18 @@
     "tslint": "~5.11.0",
     "typescript": "~2.7.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android",
+      "ios"
+    ]
+  }
 }
